--- a/多线程实现.md
+++ b/多线程实现.md
@@ -54,34 +54,41 @@ class DownloadManager:
 ### 2. 分片级并发下载
 
 ```python
-class TurboDownloader(BaseDownloader):
+class YtDlpExtractor(BaseExtractor):
+    """yt-dlp based universal extractor"""
+
     def __init__(self, config: Dict[str, Any] = None):
         super().__init__(config)
-        
+
         # 并发下载配置
         self.concurrent_fragments = self.config.get('concurrent_fragments', 4)
         self.fragment_retries = self.config.get('fragment_retries', 10)
         self.chunk_size = self.config.get('http_chunk_size', 10485760)  # 10MB
-    
-    def _get_ydl_opts(self, task: DownloadTask, progress_hook=None):
+
+    def download(self, task: DownloadTask, progress_callback=None) -> bool:
+        """Download video with concurrent fragments"""
         ydl_opts = {
             # 核心：并发分片下载
             'concurrent_fragment_downloads': self.concurrent_fragments,
             'fragment_retries': self.fragment_retries,
             'http_chunk_size': self.chunk_size,
-            
+
             # 性能优化
             'socket_timeout': 30,
             'retries': 10,
         }
-        
+
         # 平台特定优化
         platform = PlatformDetector.detect_platform(task.url)
         platform_config = self.config.get('platforms', {}).get(platform, {})
         if 'concurrent_fragments' in platform_config:
             ydl_opts['concurrent_fragment_downloads'] = platform_config['concurrent_fragments']
-        
-        return ydl_opts
+
+        # 执行下载
+        with self.yt_dlp.YoutubeDL(ydl_opts) as ydl:
+            ydl.download([task.url])
+
+        return True
 ```
 
 ---
@@ -169,8 +176,8 @@ self.download_queue = queue.Queue()
 def _download_task(self, task: DownloadTask):
     """执行下载任务，包含完整异常处理"""
     try:
-        downloader = TurboDownloader(self.config)
-        success = downloader.download(task, self._progress_callback)
+        extractor = YtDlpExtractor(self.config)
+        success = extractor.download(task, self._progress_callback)
         
         if success:
             task.status = DownloadStatus.COMPLETED.value
